# git-third-party

./: .gitignore  LICENSE  README.md  flake.nix  go.mod  hatch_build.py  pyproject.toml
.github/workflows/: pages.yml  release.yml
cmd/git-third-party/: main.go
cmd/git-third-party-lib/: cgo_bindings.go  main.go
docs/: index.html  site.js  styles.css
internal/core/: bench_test.go  bridge.go  bridge_test.go  cli.go  cli_test.go  commands.go  commands_test.go  coverage_test.go  download.go  errors.go  features_test.go  filter.go  filter_test.go  fnmatch.go  fuzz_test.go  git.go  gitmodules.go  gitmodules_test.go  integration_test.go  internals_test.go  obs.go  observability_test.go  options.go  output.go  parity_test.go  patch.go  patch_integration_test.go  patch_test.go  paths.go  persist.go  persist_test.go  settings.go  shlex.go  shlex_test.go  tree.go  tree_test.go  types.go  v0_0_1_test.go  validate.go  validate_test.go
node/: build-platform-package.sh
node/git-third-party/: .npmignore  package-lock.json  package.json
node/git-third-party/src/: index.ts  resolve.ts
node/git-third-party/test/: bindings.test.mjs
npm/: build-platform-package.sh
npm/git-third-party/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
npm/git-third-party/src/: api.ts  errors.ts  ffi.ts  resolve.ts  types.ts
python/: hatch_build.py  pyproject.toml
python/git-third-party/: __init__.py  _exceptions.py  _ffi.py  api.py  types.py
skills/vendor-third-party/: SKILL.md
